<resources>
    <string name="app_name">TugasHarianAndroid</string>
    <string name="home">Home</string>
    <string name="bmi">BMI</string>
    <string name="about_me">About Me</string>
    <string name="this_is_home_fragment">This Is Home Fragment</string>
    <string name="welcome">Welcome!</string>
    <string name="about_me_text">Hello, My Name Is Dian\nI Create This App</string>
    <string name="go_to_bmi_calculator">Go To BMI Calculator</string>
    <string name="berat_kg">Berat (Kg)</string>
    <string name="tinggi_cm">Tinggi (Cm)</string>
    <string name="hitung_bmi">Hitung BMI</string>
    <string name="label_bmi_result">BMI Anda Adalah :</string>
    <string name="bmi_calculator">BMI Calculator</string>
</resources>